# ImageEditor

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  Image.hpp  ImageEditor.cbp  ImageEditor.depend  ImageEditor.layout  ImageWindow.cpp  ImageWindow.h  ImageWindow.hpp  MutexedImage.h  MutexedImage.hpp  conanfile.txt  main.cpp  temp.txt
images/: tigre.pbm
